Fixed: progressbar during upload were not visible

--- a/client/app/views/styles/_list.styl
+++ b/client/app/views/styles/_list.styl
@@ -34,6 +34,9 @@
         .date-column-cell
             width 190px
 
+        // .type-column + .date-column
+        .progressbar-cell
+            width 290px
 
         // Center vertically all cell elements.
         [role="gridcell"]
@@ -52,6 +55,9 @@
 
                 &:hover .operations
                     display inline-block
+
+            .progressview
+                display flex
 
 
     [role="columnheader"]
